Add default garabage collection JVM opts to launcherStatic, fixes #126